<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NurseTriage</string>
    <string name="action_settings">Settings</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_birthday">Patient Birthday</string>
    <string name="patient_healthcardnumber">Patient HealthCardNumber</string>
    <string name="patient_arrivaltime">Patient ArrivalTime</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="record_patient">Record a patient</string>
    <string name="newly_record">Record a new patient</string>
    <string name="vitalSign_age">Age</string>
    <string name="vitalSign_temp">Temperate</string>
    <string name="vitalSign_sys">Systolic</string>
	<string name="vitalSign_dia">Diastolic</string>
	<string name="vitalSign_heart">Heart Rate</string>
	<string name="welcome_hello">Nurse can log in here</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="reset">reset</string>
    <string name="register">register</string>
    <string name="information">congratulation!</string>
    <string name="success_info">Hello Android Developer,You ID Is</string>
    <string name="errorpage">Sorry,You don\'t login,Please press "Login again" Button to first page</string>
    <string name="error_back">Login again</string>
    <string name="back">Login again</string>
    <string name="exit">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="truee">True</string>
</resources>
