<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/record_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="14dp"
        android:text="@string/record_patient" />

    <EditText
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_patient"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/patient_name" />

    <EditText
        android:id="@+id/patient_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_name"
        android:layout_below="@+id/patient_name"
        android:ems="10"
        android:hint="@string/patient_birthday" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/patient_healthcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_birthday"
        android:layout_below="@+id/patient_birthday"
        android:ems="10"
        android:hint="@string/patient_healthcardnumber" />

    <EditText
        android:id="@+id/patient_arrivaltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_healthcard"
        android:layout_below="@+id/patient_healthcard"
        android:ems="10"
        android:hint="@string/patient_arrivaltime" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_arrivaltime"
        android:layout_below="@+id/patient_arrivaltime"
        android:ems="10"
        android:hint="@string/vitalSign_age" />

    <EditText
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/age"
        android:layout_below="@+id/age"
        android:ems="10"
        android:hint="@string/vitalSign_temp" />

    <EditText
        android:id="@+id/systolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temp"
        android:layout_below="@+id/temp"
        android:ems="10"
        android:hint="@string/vitalSign_sys" />

    <EditText
        android:id="@+id/diastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/systolic"
        android:layout_below="@+id/systolic"
        android:ems="10"
        android:hint="@string/vitalSign_dia" />

    <Button
        android:id="@+id/newly_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="recordPatient"
        android:text="@string/Submit" />

    <EditText
        android:id="@+id/heartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diastolic"
        android:layout_below="@+id/diastolic"
        android:ems="10"
        android:hint="@string/vitalSign_heart" />

</RelativeLayout>